<resources>
    <string name="app_name">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="narenda_wicaksono">Narenda Wicaksono</string>
    <string name="narenda_dicoding_com">narenda@dicoding.com</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_map">Maps</string>
    <string name="menu_hotel">Hotel</string>
    <string name="menu_subway">Subway</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="this_is_maps_fragment">This is maps fragment</string>
    <string name="this_is_cart_fragment">this is cart fragment</string>
    <string name="this_is_hotel_fragment">This is hotel fragment</string>
</resources>