<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.code.navigationdrawer.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.code.navigationdrawer.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.code.navigationdrawer.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.code.navigationdrawer.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_map"
        android:name="com.code.navigationdrawer.MapsFragment"
        android:label="@string/menu_map"
        tools:layout="@layout/fragment_maps"/>

    <fragment
        android:id="@+id/nav_hotel"
        android:name="com.code.navigationdrawer.HotelFragment"
        android:label="@string/menu_hotel"
        tools:layout="@layout/fragment_hotel" />


    <activity
        android:id="@+id/nav_subway"
        android:name="com.code.navigationdrawer.SubwayActivity"
        android:label="@string/menu_subway"
        tools:layout="@layout/activity_subway" />
</navigation>